# qiboml

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.md.bak  exercise.py  flake.nix  prova.py  pyproject.toml  pytest.ini  selfhosted  test_diff.py  test_keras.py  test_tf_train.py  test_triad.py
.github/: codecov.yml
.github/workflows/: deploy.yml  free-disk-space.yml  free_space.yml  publish.yml  tests.yml
doc/source/: .gitignore  conf.py  index.rst  refs.bib
doc/source/advanced/: calibrator.rst  decoder.rst  decoder.rst~  encoder.rst  equivariant.rst  equivariant.rst~  index.rst  index.rst~  optimizers.rst
doc/source/api-reference/: qiboml.backends.rst  qiboml.differentiation.rst  qiboml.interfaces.rst  qiboml.interfaces.rst~  qiboml.models.rst  qiboml.models.rst~  qiboml.rst
doc/source/getting-started/: construct_backends.rst  index.rst  installation.rst  quickstart.rst
doc/source/getting_started/: backend.rst  differentiation.rst  index.rst  index.rst~  installation.rst  installation.rst~  interface.rst  quickstart.rst  quickstart.rst~
doc/source/tutorials/: binary_mnist.ipynb  data_reuploading.ipynb  variational_quantum_linear_solver.ipynb  vqe.ipynb
examples/qmatchatea/: qmatchatea_introduction.ipynb
examples/quimb/: quimb_engine_tests.py
paper_simulations/: execute.py  plot.py  run.sh
qiboml/: pyvenv.cfg
src/qiboml/: __init__.py  ansatze.py  exercise.py  result.py  result.py~  test_reuploading.py  test_reuploading2D.py  test_u3.py
src/qiboml/backends/: #jax.py#  #pytorch.py#  .#jax.py  .#pytorch.py  __init__.py  einsum_utils.py  einsum_utils.py~  jax.py  pytorch.py  tensorflow.py  torch_matrices.py
src/qiboml/differentiation/: psr.py
src/qiboml/differentiations/: __init__.py  abstract.py  adjoint.py  jax.py  psr.py  quimb.py
src/qiboml/interfaces/: circuit_tracer.py  keras.py  pytorch.py  utils.py
src/qiboml/models/: #ansatze.py#  #pytorch.py#  .#decoding.py  .#encoding_decoding.py  .#pytorch.py  __init__.py  _pytorch.py  _utils.py  _utils.py~  abstract.py  ansatze.py  calibrator.py  decoding.py  encoding.py  encoding_decoding.py  encodings.py  keras.py  optimizers.py  pqc.py  pytorch.py  pytorch.py~  qcnn.py  torch.py  trainable_circuit.py  u3.py  utils.py
src/qiboml/models/layers/: __init__.py  encoding.py  training.py
src/qiboml/models/reuploading/: abstract.py  fourier.py  u3.py
src/qiboml/operations/: __init__.py  differentiation.py  differentiation_jax.py  expectation.py  utils.py
src/qiboml/optimizers/: __init__.py  abstract.py  gradient_based.py  heuristics.py  minimizers.py  qng.py  qng_jax.py  qng_tf.py  qng_torch.py
src/qiboml/quantum_info/: _quantum_info_jax.py  _quantum_info_pytorch.py  quantum_info_jax.py  quantum_info_pytorch.py  quantum_info_tensorflow.py
src/qiboml/tests2D/: test_reuploading2D.py
src/qiboml/visualization/: training_landscape.py  visualization.py
src/qibotn/: __init__.py  circuit_convertor.py  circuit_to_mps.py  eval.py  eval_qu.py  mps_contraction_helper.py  mps_utils.py  result.py
src/qibotn/backends/: __init__.py  abstract.py  cutensornet.py  qmatchatea.py  quimb.py
test_quimb_backend/: vqe.py
tests/: #conftest.py#  #test_backprop.py#  #test_interfaces.py#  #test_models_decoding.py#  #test_models_interfaces.py#  .#conftest.py  .#test_models_decoding.py  .#test_models_interfaces.py  Useless.py  config.py  conftest.py  conftest.py~  test_backends.py  test_backprop.py  test_calibrator.py  test_circuit_execution.py  test_cuquantum_cutensor_backend.py  test_custom_differentiation.py  test_differentiation.py  test_differentiation_rules.py  test_expectation.py  test_interfaces.py  test_interfaces_circuit_tracer.py  test_interfaces_utils.py  test_mitigation.py  test_models.py  test_models.py~  test_models_ansatze.py  test_models_decoding.py  test_models_encoding.py  test_models_interfaces.py  test_models_interfaces_drawings.py  test_models_optimizers.py  test_models_pytorch.py  test_models_reuploading.py  test_operations_differentiation.py  test_optimizers.py  test_quimb_backend.py  utils.py
tests/emulator/: parameters.json
tests/plt_test_files/: model_draw.npy
tutorials/: Untitled.ipynb  Untitled1.ipynb  VQLS_tutorial.ipynb  advanced_qru.ipynb  binary_mnist.ipynb  custom_differentiation.ipynb  data_reuploading.ipynb  differentiate_wrt_data.ipynb  gradients_wrt_data.ipynb  initialization.ipynb  integrating_with_a_vqc.ipynb  jax_training_test.ipynb  keras_interface.ipynb  model_example.ipynb  model_training.ipynb  plot_loss_landscape.py  pqc.ipynb  real_time_error_mitigation.ipynb  variational_quantum_linear_solver.ipynb  visualization.ipynb  vqe.ipynb
