[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "qiboml"
version = "0.0.1"
description = "Quantum Machine Learning using Qibo"
authors = ["Qiboteam"]
readme = "README.md"
homepage = "https://qibo.science/"
repository = "https://github.com/qiboteam/qiboml/"
documentation = "https://qibo.science/docs/qiboml/stable"
packages = [{ include = "qiboml", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.4"
keras = { version = "^3.0.0", optional = true }
tensorflow = { version = "^2.16.1", markers = "sys_platform == 'linux' or sys_platform == 'darwin'", optional = true }
# TODO: the marker is a temporary solution due to the lack of the tensorflow-io 0.32.0's wheels for Windows, this package is one of
# the tensorflow requirements
torch = { version = "^2.3.1", optional = true}
qibo = {git="https://github.com/qiboteam/qibo"}
jax = "^0.4.25"
jaxlib = "^0.4.25"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^5.3.0"
furo = "^2023.3.27"
sphinxcontrib-bibtex = "^2.5.0"
sphinx-copybutton = "^0.5.2"
sphinxcontrib-katex = "^0.9.9"
recommonmark = "^0.7.1"
nbsphinx = "^0.9.6"
setuptools = "^75.8.2"
ipykernel = "^6.29.5"
torcheval = "^0.0.7"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipython = "^7.34"
pdbpp = "^0.10.3"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = "^7.2.1"
pylint = "3.1.0"
pytest-cov = "4.0.0"
qibojit = "^0.1.7"
keras = { version = "^3.0.0", optional = true }
tensorflow = { version = "^2.16.1", markers = "sys_platform == 'linux' or sys_platform == 'darwin'"}
torch = { version = "^2.3.1"}

[tool.poetry.group.benchmark.dependencies]
pytest-benchmark = { version = "^4.0.0", extras = ["histogram"] }

[tool.poe.tasks]
bench = "pytest benchmarks/"
test = "pytest"
lint = "pylint src/**/*.py -E"
lint-warnings = "pylint src/**/*.py --exit-zero"
docs = "make -C doc html"
docs-clean = "make -C doc clean"
test-docs = "make -C doc doctest"

[tool.pytest.ini_options]
testpaths = ['tests/', 'benchmarks/']
python_files = ['test_*.py', 'bench_*.py']
python_classes = ['Test*', 'Benchmark*']
python_functions = ['test_*', 'bench_*']
addopts = [
  "--benchmark-warmup=on",
  "--benchmark-warmup-iterations=100000",
  "--benchmark-disable-gc",
  "--benchmark-histogram=bench-hists/bench",
  '--cov=qiboml',
  '--cov-append',
  '--cov-report=xml',
  '--cov-report=html',
  '--durations=60',
]
