[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "qiboml"
version = "0.0.2"
description = "Quantum Machine Learning using Qibo"
authors = ["Qiboteam"]
readme = "README.md"
homepage = "https://qibo.science/"
repository = "https://github.com/qiboteam/qiboml/"
documentation = "https://qibo.science/docs/qiboml/stable"
packages = [{ include = "qiboml", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^2.0.0"
keras = { version = "^3.0.0", optional = true }
tensorflow = { version = "^2.16.1", markers = "sys_platform == 'linux' or sys_platform == 'darwin'", optional = true }
# TODO: the marker is a temporary solution due to the lack of the tensorflow-io 0.32.0's wheels for Windows, this package is one of
# the tensorflow requirements
torch = { version = "^2.3.1", optional = true}
qibo = "^0.2.17"
jax = "^0.4.25"
jaxlib = "^0.4.25"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^5.3.0"
furo = "^2023.3.27"
sphinxcontrib-bibtex = "^2.5.0"
sphinx-copybutton = "^0.5.2"
sphinxcontrib-katex = "^0.9.9"
recommonmark = "^0.7.1"
nbsphinx = "^0.9.6"
setuptools = "^75.8.2"
ipykernel = "^6.29.5"
torchmetrics = "^1.7.0"
keras = { version = "^3.0.0" }
tensorflow = { version = "^2.16.1", markers = "sys_platform == 'linux' or sys_platform == 'darwin'"}
torch = { version = "^2.3.1"}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipython = "^7.34"
pdbpp = "^0.10.3"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = "^7.2.1"
pylint = "3.1.0"
pytest-cov = "4.0.0"
qibojit = "^0.1.7"
matplotlib = "^3.7.0"
keras = "^3.0.0"
tensorflow = { version = "^2.16.1", markers = "sys_platform == 'linux' or sys_platform == 'darwin'"}
torch = { version = "^2.3.1"}
qibolab = { git="https://github.com/qiboteam/qibolab", extras=["emulator"] }

[tool.poetry.group.cuda11]
optional = true

[tool.poetry.group.cuda11.dependencies]
jax = {extras = ["cuda11"], version = "^0.4.25"}

[tool.poetry.group.cuda12]
optional = true

[tool.poetry.group.cuda12.dependencies]
jax = {extras = ["cuda12"], version = "^0.4.25"}

[tool.poe.tasks]
test = "pytest"
lint = "pylint src/**/*.py -E"
lint-warnings = "pylint src/**/*.py --exit-zero"
docs = "make -C doc html"
docs-clean = "make -C doc clean"
test-docs = "make -C doc doctest"

[tool.pytest.ini_options]
testpaths = ['tests/']
addopts = [
  '--cov=qiboml',
  '--cov-append',
  '--cov-report=xml',
  '--cov-report=html',
  '--durations=60',
]
